# Taliyah

./: .env.sample  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  LICENSE.txt  README.md  TODO.md  build.rs  commands.md  config.sample.json  config.sample.toml  config.toml.sample  erica.js  gulpfile.js  package-lock.json  package.json  rustfmt.toml  sqlx-data.json  tsconfig.json  tslint.json
.github/: FUNDING.yml
.github/workflows/: audit-project.yml  check-project.yml  run_tests.yml  rust.yml
migrations/: 20201121051913_create_database.sql  20201205023818_pronouns_in_profile.sql  20201205032238_remove_social_fields.sql  20201205032710_add_comments_to_profile_fields.sql
src/: config.rs  constants.rs  data.rs  ellie.ts  erica.js  error.rs  main.rs  strings.json
src/assets/json/: activities.json  strings.json
src/assets/models/: lastfm.js  report.js
src/bot/assets/: activities.json
src/bot/client/: Config.ts  EllieClient.ts
src/bot/commands/extra/: steamstatus.ts  weather.ts
src/bot/commands/fun/: steamstatus.ts
src/bot/commands/info/: about.ts  changelog.ts  guild.ts  user.ts
src/bot/commands/moderation/: ban.ts  kick.ts  purge.ts
src/bot/commands/music/: connect.ts  disconnect.ts
src/bot/commands/music/lastfm/: lastfm.ts
src/bot/commands/music/spotify/: album.ts  artist.ts  credits.ts  newreleases.ts  spalbum.ts  spnewreleases.ts  spotify.ts  track.ts  user.ts
src/bot/commands/search/: npm.ts
src/bot/commands/search/github/: github.ts  repository.ts  user.ts
src/bot/commands/search/lookup/: npm.ts
src/bot/commands/search/pokemon/: pokemon.ts
src/bot/commands/search/research/: wikipedia.ts
src/bot/commands/utilities/: about.ts  eval.ts  help.ts  ping.ts
src/bot/listeners/client/: debug.ts  messagedelete.ts  ready.ts
src/bot/listeners/client/auditlog/: messagedelete.ts
src/bot/util/: Constants.ts  Utilities.ts
src/bot/utils/: Constants.ts  Util.ts
src/commands/: mod.rs  voice.rs
src/commands/extra/: mod.rs  sloc.rs  steamstatus.rs  weather.rs
src/commands/fun/: ascii.rs  mod.rs  printerfacts.rs  urban.rs  xkcd.rs
src/commands/info/: about.rs  changelog.js  changelog.rs  channel.rs  first_message.rs  guild.rs  id.js  mod.rs  profile.rs  role.rs  server.js  user.js  user.rs
src/commands/moderation/: ban.js  ban.rs  kick.js  kick.rs  mod.rs  purge.js  report.js  slowmode.rs
src/commands/music/: lastfm.rs  mod.rs  spotify.js
src/commands/music/lastfm/: lastfm.js  mod.rs  nowplaying.rs  profile.rs  scrobbles.rs
src/commands/music/spotify/: album.rs  artist.rs  credits.rs  mod.rs  newreleases.rs  spalbum.js  spnewreleases.js  spplaylist.js  spshow.js  sptrack.js  status.rs  track.rs
src/commands/music/spotify/commands/: album.rs  mod.rs  spotify.rs  track.rs
src/commands/music/voice/: join.rs  leave.rs  mod.rs  play.rs
src/commands/research/: mod.rs
src/commands/search/: crates.rs  krate.rs  mod.rs
src/commands/search/github/: ghrepo.js  ghuser.js  github.js  mod.rs  repository.rs  user.rs
src/commands/search/github/subcommands/: ghrepo.js  ghuser.js
src/commands/search/nexusmods/: nmgame.js
src/commands/search/pokemon/: pokemon.js
src/commands/search/reddit/: mod.rs  subreddit.rs  user.rs
src/commands/search/research/: wikipedia.js
src/commands/search/tmdb/: cast.rs  collection.rs  mod.rs  movie.rs  show.rs
src/commands/search/youtube/: youtube.js  ytchannel.js  ytvideo.js
src/commands/search/youtube/subcommands/: ytchannel.js  ytvideo.js
src/commands/social/twitter/: mod.rs  user.rs
src/commands/util/: about.js  help.js  ping.js  purge.js
src/commands/util/cleanup/: purge.js
src/commands/utilities/: help.rs  invite.rs  mod.rs  ping.rs  prefix.rs  shutdown.rs  source.rs  version.rs
src/commands/utilities/owner/: bnick.rs  mod.rs
src/commands/utils/: help.rs  mod.rs  ping.rs  prefix.rs  version.rs
src/graphql/queries/github/: CommitsQuery.graphql  UserQuery.graphql  commits.graphql  repository.graphql  user.graphql
src/graphql/schemas/: github.graphql
src/listeners/: handler.rs  mod.rs
src/listeners/client/: disconnect.js  ready.js  reconnect.js
src/listeners/events/: guild_create.rs  message.rs  messagecreate.rs  mod.rs  ready.rs
src/listeners/hooks/: mod.rs  prefix_only.rs
src/models/: mod.rs
src/models/tmdb/: mod.rs  movie.rs  show.rs
src/structs/: EricaClient.js
src/tests/: config.rs
src/util/: utilities.js
src/utilities/: built_info.rs  color_utils.rs  database.rs  geo_utils.rs  git_utils.rs  mod.rs  parsing_utils.rs  string_utils.rs
src/utils/: color.rs  color_utils.rs  git.rs  git_utils.rs  locale_utils.rs  macros.rs  mod.rs  net_utils.rs  parsing_utils.rs
