[package]
name                = "ellie"
version             = "0.7.0-alpha"
authors             = ["Evelyn Marie <evelynelizabethmarie@gmail.com>"]
description         = "A Discord bot written in Rust with Serenity."
homepage            = "https://github.com/evelynmarie/Ellie"
repository          = "https://github.com/evelynmarie/Ellie.git"
keywords            = ["discord", "discord-api", "bot", "serenity"]
edition             = "2021"
license             = "MIT"
readme              = "README.md"
include             = ["src/**/*", "config.sample.toml", "Cargo.toml", "README.md"]

[dependencies]
anyhow              = "1.0.53"
aspotify            = "0.7.1"
byte-unit           = "4.0.13"
chrono              = "0.4.19"
humantime           = "2.1.0"
itertools           = "0.10.3"
lastfm-rs           = "0.5.0"
poise               = "0.4.0"
serde               = { version = "1.0.136", features = ["derive"] }
serde_json          = "1.0.79"
tokio               = { version = "1.16.1", features = ["full"] }
toml                = "0.5.8"
tracing             = "0.1.30"
tracing-futures     = "0.2.5"
tracing-log         = "0.1.2"
tracing-subscriber  = { version = "0.3.8", features = ["env-filter"] }

[dependencies.reqwest]
version             = "0.11.9"
default-features    = false
features            = ["json", "multipart", "stream", "rustls-tls"]

[dependencies.serenity]
git                 = "https://github.com/serenity-rs/serenity"
branch              = "next"
default-features    = true
features            = ["collector", "unstable_discord_api", "rustls_backend"]
