[package]
name                = "taliyah"
version             = "0.7.0-alpha"
authors             = ["Evelyn Marie <evelynelizabethmarie@gmail.com>"]
description         = "A Discord bot written in Rust with Serenity."
homepage            = "https://github.com/evelynmarie/Taliyah"
repository          = "https://github.com/evelynmarie/Taliyah.git"
keywords            = ["discord", "discord-api", "bot", "serenity"]
edition             = "2021"
license             = "MIT"
readme              = "README.md"
include             = ["src/**/*", "config.sample.toml", "Cargo.toml", "README.md"]

[dependencies]
aspotify            = "0.7.1"
chrono              = "0.4.22"
git2                = "0.15.0"
humantime           = "2.1.0"
itertools           = "0.10.5"
lastfm-rs           = "0.5.0"
reqwest             = { version = "0.11.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"]}
serde               = { version = "1.0.147", features = ["derive"] }
serde_json          = "1.0.87"
tokio               = { version = "1.21.2", features = ["full"] }
toml                = "0.5.9"
tracing             = "0.1.37"
tracing-futures     = "0.2.5"
tracing-log         = "0.1.3"
tracing-subscriber  = { version = "0.3.16", features = ["env-filter"] }

[dependencies.serenity]
git                 = "https://github.com/serenity-rs/serenity"
branch              = "next"
default-features    = true
features            = ["collector", "unstable_discord_api"]

[dependencies.sqlx]
git                 = "https://github.com/launchbadge/sqlx"
default-features    = false
features            = ["runtime-tokio-rustls", "macros", "postgres", "uuid"]
